# django-otp

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .hgignore  .isort.cfg  .readthedocs.yaml  CHANGES  CHANGES.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  Pipfile  README  README.rst  manage.py  pyproject.toml  readthedocs.yaml  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: test.yaml  tox.yaml
django_otp/: __init__.py  admin.py  conf.py  decorators.py  forms.py  middleware.py  models.py  oath.py  tests.py  util.py  views.py
django_otp/fixtures/django_otp/: alice_and_bob.yaml
django_otp/fixtures/tests/: alice_and_bob.yaml
django_otp/plugins/: __init__.py
django_otp/plugins/otp_email/: admin.py  conf.py  models.py  tests.py
django_otp/plugins/otp_email/migrations/: 0001_initial.py
django_otp/plugins/otp_email/south_migrations/: 0001_initial.py
django_otp/plugins/otp_email/templates/otp/email/: token.txt
django_otp/plugins/otp_hotp/: admin.py  models.py  tests.py
django_otp/plugins/otp_hotp/fixtures/otp_hotp/: tests.yaml
django_otp/plugins/otp_hotp/fixtures/tests/: hotp.yaml
django_otp/plugins/otp_hotp/migrations/: 0001_initial.py
django_otp/plugins/otp_hotp/south_migrations/: 0001_initial.py
django_otp/plugins/otp_static/: admin.py  lib.py  models.py  tests.py
django_otp/plugins/otp_static/management/commands/: addstatictoken.py
django_otp/plugins/otp_static/migrations/: 0001_initial.py
django_otp/plugins/otp_static/south_migrations/: 0001_initial.py
django_otp/plugins/otp_totp/: admin.py  conf.py  models.py  tests.py
django_otp/plugins/otp_totp/fixtures/otp_totp/: tests.yaml
django_otp/plugins/otp_totp/fixtures/tests/: totp.yaml
django_otp/plugins/otp_totp/migrations/: 0001_initial.py  0002_last_t.py
django_otp/templates/otp/admin13/: login.html
django_otp/templates/otp/admin15/: login.html
django_otp/templates/otp/admin16/: login.html
django_otp/templates/otp/admin17/: login.html
django_otp/tests/: __init__.py  forms.py
docs/: Makefile  automake.sh  requirements.txt
docs/ext/: otpdocs.py
docs/source/: .spell.utf-8.add  auth.rst  changes.rst  conf.py  contributing.rst  extend.rst  index.rst  overview.rst
src/django_otp/: __init__.py  admin.py  conf.py  decorators.py  encryption.py  fields.py  forms.py  middleware.py  models.py  oath.py  test_utils.py  tests.py  util.py  views.py
src/django_otp/locale/cs_CZ/LC_MESSAGES/: django.po
src/django_otp/locale/de/LC_MESSAGES/: django.mo  django.po
src/django_otp/locale/es/LC_MESSAGES/: django.mo  django.po
src/django_otp/locale/fr/LC_MESSAGES/: django.mo  django.po
src/django_otp/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
src/django_otp/locale/pt_PT/LC_MESSAGES/: django.mo  django.po
src/django_otp/plugins/otp_email/: __init__.py  admin.py  conf.py  models.py  test_email.py  tests.py
src/django_otp/plugins/otp_email/migrations/: 0001_initial.py  0005_emaildevice_last_generated.py  0006_emaildevice_created_at_emaildevice_last_used_at.py
src/django_otp/plugins/otp_hotp/: __init__.py  admin.py  models.py  test_otp_hotp.py  tests.py
src/django_otp/plugins/otp_hotp/migrations/: 0001_initial.py
src/django_otp/plugins/otp_static/: __init__.py  admin.py  lib.py  models.py  test_static.py  tests.py
src/django_otp/plugins/otp_static/management/commands/: addstatictoken.py
src/django_otp/plugins/otp_static/migrations/: 0001_initial.py  0003_staticdevice_created_at_staticdevice_last_used_at.py
src/django_otp/plugins/otp_totp/: __init__.py  admin.py  encryption.py  models.py  test_totp.py  tests.py
src/django_otp/plugins/otp_totp/migrations/: 0001_initial.py  0003_encrypted_key.py  0003_totpdevice_created_at_totpdevice_last_used_at.py
src/django_otp/templates/otp/admin111/: login.html
src/django_otp/templates/otp/admin14/: login.html
src/django_otp/templates/otp/admin18/: login.html
src/django_otp/templates/otp/admin19/: login.html
test/: otp_twilio  otp_yubikey  settings.py  urls.py
test/config/: github.toml  sample.toml
test/test_project/: backends.py  config.py  settings.py  urls.py  views.py
test/test_project/templates/: about.html  home.html  navbar.html  root.html
test/test_project/templates/bs5/: input.html  select.html
test/test_project/templates/otp/email/: custom.txt  custom_html.html  token.txt
test/test_project/templates/registration/: login.html
test/test_project/test_app/: apps.py  models.py
test/test_project/test_app/migrations/: 0001_initial.py
test15/: README  django_otp  manage.py
test15/test15/: settings.py  wsgi.py
test15/test15/app/: models.py  tests.py
test15/test15/app/fixtures/: alice_and_bob.yaml
