[project]
name = "django-otp"
version = "1.1.6"
description = "A pluggable framework for adding two-factor authentication to Django using one-time passwords."
readme = "README.rst"
requires-python = ">=3.7"
license = "Unlicense"
authors = [
    { name = "Peter Sagerson", email = "psagers@ignorare.net" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django >= 3.2",
]

[project.optional-dependencies]
qrcode = [
    "qrcode",
]

[project.urls]
Homepage = "https://github.com/django-otp/django-otp"
Documentation = "https://django-otp-official.readthedocs.io/"


#
# Development
#

[tool.hatch.envs.default]
features = [
    "qrcode",
]
dependencies = [
    "bumpversion ~= 0.6.0",
    "coverage ~= 6.3",
    "flake8 ~= 4.0",
    "freezegun ~= 1.2.0",
    "isort ~= 5.10",
    "psycopg2",
    "tomli >= 1.1.0; python_version < '3.11'",
]

[tool.hatch.envs.default.env-vars]
PYTHONPATH = "test"
DJANGO_SETTINGS_MODULE = "test_project.settings"

[tool.hatch.envs.default.scripts]
manage = "python -m django {args}"

lint = [
    "flake8 src",
    "isort -c src",
]
fix = [
    "isort src",
]

test = "python -s -m django test {args:django_otp}"
check = ["lint", "test"]

warn = "python -Wd -s -m django test {args:django_otp}"
cov = [
    "coverage run -m django test {args:django_otp}",
    "coverage report",
]


[tool.hatch.envs.test.scripts]
run = "test"

[tool.hatch.envs.test.overrides]
matrix.django.dependencies = [
    { value = "django ~= 3.2.0", if = ["3.2"] },
    { value = "django ~= 4.1.0", if = ["4.1"] },
    { value = "django ~= 4.2.0", if = ["4.2"] },
]
matrix.mode.scripts = [
    { key = "run", value = "lint", if = ["lint"] },
    { key = "run", value = "cov", if = ["coverage"] },
]

[[tool.hatch.envs.test.matrix]]
mode = ["lint"]

# WARNING: When you update the Python versions, make sure to update
# .github/workflows/* as well.
[[tool.hatch.envs.test.matrix]]
python = ["3.7"]
django = ["3.2"]

[[tool.hatch.envs.test.matrix]]
python = ["3.11"]
django = ["4.1", "4.2"]

[[tool.hatch.envs.test.matrix]]
mode = ["coverage"]


[tool.hatch.envs.docs]
template = "docs"
dependencies = [
    "sphinx"
]

[tool.hatch.envs.docs.scripts]
make = "command make -C docs {args:html}"
open = "command xdg-open docs/build/html/index.html"


#
# Build
#

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/django_otp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
    "/test",
    "/CHANGES.rst",
]


#
# Other tools
#

[tool.isort]
force_sort_within_sections = true
line_length = 120
lines_after_imports = 2
multi_line_output = 5

sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
known_third_party = ["freezegun"]
known_django = ["django"]
known_first_party = ["django_otp"]
skip_glob = ["**/migrations/*.py"]
